[gd_scene load_steps=12 format=3 uid="uid://ckse4dxv6k6fm"]

[ext_resource type="Script" path="res://scripts/cannon.gd" id="1_531d2"]
[ext_resource type="Texture2D" uid="uid://bx6hxf3vxmv5r" path="res://Kings and Pigs/Sprites/10-Cannon/Idle.png" id="1_718is"]
[ext_resource type="Texture2D" uid="uid://c3flnmv86x7qp" path="res://Kings and Pigs/Sprites/10-Cannon/Shoot (44x28).png" id="3_5deb8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s3ect"]
atlas = ExtResource("1_718is")
region = Rect2(0, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3xc3"]
atlas = ExtResource("3_5deb8")
region = Rect2(0, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i2lo"]
atlas = ExtResource("3_5deb8")
region = Rect2(44, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_086ym"]
atlas = ExtResource("3_5deb8")
region = Rect2(88, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5noyb"]
atlas = ExtResource("3_5deb8")
region = Rect2(132, 0, 44, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_8wy44"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3ect")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3xc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i2lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_086ym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5noyb")
}],
"loop": true,
"name": &"Shooting",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7csja"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2bwqr"]
radius = 320.894

[node name="Cannon" type="Area2D"]
script = ExtResource("1_531d2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_8wy44")
animation = &"Shooting"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 2)
shape = SubResource("CircleShape2D_7csja")

[node name="AreaHit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaHit"]
position = Vector2(6, 2)
shape = SubResource("CircleShape2D_2bwqr")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="AreaHit" to="." method="_on_area_hit_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
